coaster/tests/ui/err-06-two_write_borrows.stderr
error[E0499]: cannot borrow `*x` as mutable more than once at a time
  --> $DIR/err-06-two_write_borrows.rs:9:14
   |
8  |     let m1 = x.write_only(&dev).unwrap();
   |              ------------------ first mutable borrow occurs here
9  |     let m2 = x.write_only(&dev).unwrap();
   |              ^^^^^^^^^^^^^^^^^^ second mutable borrow occurs here
...
13 |     let _foo = m1;
   |                -- first borrow later used here
